--- a/src/LarpManager/Views/public/personnage/fragment/item.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/item.twig
@@ -12,6 +12,11 @@
 				</div>
 			{% endfor %}
 			</div>
-			
+
+		{% if personnage.materiel %}
+			<div class="list-group-item">
+				<div class="list-group-item-text">{{ personnage.materiel }}</div>
+			</div>
+		{% endif %}
 		</div>
 	</div>
