Personnage Chronologie Update
- Automatise les infos de chronologie de Naissance, Participation et Mort de vieillesse. (la mort violente est à finir)

--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -586,7 +586,7 @@
 								{# Gestion de la chronologie du personnage #}
 								{% if personnage.personnageChronologie|length > 0 %}
 									{% for personnageChronologie in personnage.personnageChronologie %}
-										<div class="list-group-item">{{ personnageChronologie.annee }} : {{ personnageChronologie.evenement }} - <a href="{{ path('personnage.admin.chronologie.delete', {'personnage': personnage.id, 'personnageChronologie' : personnageChronologie.id }) }}">Supprimer</a></div>
+										<div class="list-group-item">{{ personnageChronologie.annee }} : {{ personnageChronologie.evenement }}</div>
 									{% endfor %}
 								{% else %}
 									<p class="list-group-item-text">
