--- a/src/LarpManager/Views/admin/personnage/list.twig
+++ b/src/LarpManager/Views/admin/personnage/list.twig
@@ -13,7 +13,6 @@
 	
 	<div class="well well-sm">
 
-
 			{% if paginator.totalItems == 1 %}
 	        	<strong>1</strong> personnage trouvé.
 	    	{% else %}
@@ -37,22 +36,18 @@
 						<div class="input-group">
 							{{ form_widget(form.value) }}
 						</div>
-						<div class="input-group">					
+						<div class="input-group">
 							{{ form_widget(form.type) }}
 							<div class="input-group-btn">
 								<button type="submit" class="btn btn-default" data-toggle="tooltup" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
 								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Reset" href="{{ path('personnage.admin.list') }}"><i class="fa fa-refresh"></i></a>
 							</div>
 						</div>
-					</div>						
-					
+					</div>
 					{{ form_rest(form) }}
 		   		</form>
-		   		
-	   			
 			</div>
 			{{ paginator|raw }}
-
 
 	<table class="table table-striped table-bordered table-condensed table-hover">
 		<thead>
@@ -68,7 +63,14 @@
 					</a>
 				</th>
 				<th>
-					Classe
+					<a href="{{ path('personnage.admin.list', {'order_by': 'classe', 'order_dir': macros.getDirection(app,'classe')|trim})~optionalParameters }}">
+						Classe {{ macros.getCaret(app,'classe') }}
+					</a>
+				</th>
+				<th>
+					<a href="{{ path('personnage.admin.list', {'order_by': 'groupe', 'order_dir': macros.getDirection(app,'groupe')|trim})~optionalParameters }}">
+						Groupe {{ macros.getCaret(app,'groupe') }}
+					</a>
 				</th>
 				<th>
 					<a href="{{ path('personnage.admin.list', {'order_by': 'renomme', 'order_dir': macros.getDirection(app,'renomme')|trim})~optionalParameters }}">
@@ -76,7 +78,10 @@
 					</a>
 				</th>
 				<th>
-					Groupe
+					Pugilat
+				</th>
+				<th>
+					Héroïsme
 				</th>
 				<th>
 					Utilisateur
@@ -94,8 +99,7 @@
 				<tr>
 					<td>{{ personnage.id }}</td>
 					<td>{% if personnage.vivant == 0 %}💀 {% endif %}<a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">{{ personnage.nom }}{% if personnage.surnom %} ({{ personnage.surnom }}){% endif %}</a></td>
-					<td>{{ personnage.classe }}</td>
-					<td>{{ personnage.renomme|default(0) }}</td>
+					<td>{{ personnage.classeName }}</td>
 					<td>
 						{% set gn = 'LH1' %}
 						{% set groupe = 'N\'est pas lié à un groupe' %}
@@ -109,6 +113,9 @@
 						{% endfor %}
 						{{ gn }} - {{ groupe }}
 					</td>
+					<td align="center">{{ personnage.renomme|default(0) }}</td>
+					<td align="center">{{ personnage.pugilat|default(0) }}</td>
+					<td align="center">{{ personnage.heroisme|default(0) }}</td>
 					<td>
 						{% for participant in personnage.participants %}
 							<strong>{{ participant.gn.label }}</strong>&nbsp;-&nbsp;
