#166 fix download language doc + groupeLangue + supprime doc quand on supprime langue ou remplace le doc + disable supprimer si langue ou groupe de langue utilisé + correction pdf validation + affiche degré de diffusion liste déroulante dans edit et utilise getDiffusionLabel basé sur getCategorie dans detail + texte différent quand edit langue et qu'un document est existant + ordonne groupe langue par label ds edit + ajout retour liste langue sur edit + ajout couleur sur vue groupe list +cleanup

--- a/src/LarpManager/Views/langue/detail.twig
+++ b/src/LarpManager/Views/langue/detail.twig
@@ -37,13 +37,7 @@
 	    		<div class="list-group-item">
 			    	<h4 class="list-group-item-heading">Degré de diffusion</h4>
 			    	<p class="list-group-item-text">
-			    		{% if langue.diffusion == 0 %}
-			    			Ancien
-			    		{% elseif langue.diffusion == 1 %}
-			    			Courant
-			    		{% else %}
-			    			Commune
-			    		{% endif %}
+			    		{{ langue.getDiffusionLabel() }}
 			    	</p>
 			    </div>
 	    		
