--- a/src/LarpManager/Views/langue/fragment/form.twig
+++ b/src/LarpManager/Views/langue/fragment/form.twig
@@ -1,4 +1,5 @@
 <div class="well bs-component">
+	<a href="{{ path('langue') }}">Retour à la liste des langues</a>
 	<form action="{{ action }}" method="POST" {{ form_enctype(form) }}>
 		<fieldset>
 			<legend>{{ legend }}</legend>
