--- a/src/LarpManager/Views/langue/fragment/grouplist.twig
+++ b/src/LarpManager/Views/langue/fragment/grouplist.twig
@@ -8,7 +8,7 @@
 	{%  for groupeLangue in groupeLangues %}
 	<li class="list-group-item">
 		<h4 class="list-group-item-heading">
-			{{ groupeLangue.label }}
+			{{ groupeLangue.label }} -- <small>{{ groupeLangue.couleur }}</small>
 			<div class="btn-group pull-right" role="group" aria-label="...">
 				<a href="{{ path('langue.detailGroup', {index: groupeLangue.id}) }}" class="btn btn-primary" role="button">Détail</a>
 			    <a href="{{ path('langue.updateGroup', {index: groupeLangue.id}) }}" class="btn btn-default" role="button">Modifier</a>
