#142 récupère le dernier participant quand il n'y a pas de gn renseigné et ajout de getGroupe sur le Participant basé sur le groupegn et ajout de checks pour permettre normalement à un utilisateur d'être ajouté même sans participant (mais pas trop testé vu que je pense que de toute façon il y aura un participant)

--- a/src/LarpManager/Views/admin/personnage/add.twig
+++ b/src/LarpManager/Views/admin/personnage/add.twig
@@ -11,7 +11,7 @@
 	</ol>
 
 	<div class="well bs-component">	
-		<form action="{{ path('personnage.admin.add', {'participant' : participant.id}) }}" method="POST" {{ form_enctype(form) }}>
+		<form action="{{ path('personnage.admin.add', {'participant' : participant ? participant.id : null}) }}" method="POST" {{ form_enctype(form) }}>
 			<fieldset>
 				<legend>Ajout d'un personnage, pour l'utilisateur {{ participant.user }}</legend>
 				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
