#207 utilise la nouvelle méthode isPnj dans gn.getParticipantsPnj et rajout de la liste des participants pnj sur la partie admin de la page du gn

--- a/src/LarpManager/Views/gn/detail.twig
+++ b/src/LarpManager/Views/gn/detail.twig
@@ -34,6 +34,7 @@
 				
 				<ul>
 					<li><a href="{{ path('gn.participants', {'gn': gn.id}) }}"><i class="fa fa-users"></i> Participants ({{ gn.participants|length }})</a></li>
+					<li><a href="{{ path('gn.participants.pnj', {'gn': gn.id}) }}"><i class="fa fa-users"></i> Participants PNJs ({{ gn.participantspnj|length }})</a></li>
 					<li><a href="{{ path('gn.participants.withoutbillet', {'gn': gn.id}) }}"><i class="fa fa-users"></i> Participants sans billet ({{ gn.participantswithoutbillet|length }})</a></li>
 					<li><a href="{{ path('gn.participants.withoutgroup', {'gn': gn.id}) }}"><i class="fa fa-users"></i> Participants sans groupe (mais avec billet) ({{ gn.participantswithoutgroup|length }})</a></li>
 					<li><a href="{{ path('gn.participants.withoutperso', {'gn': gn.id}) }}"><i class="fa fa-users"></i> Participants sans personnage ({{ gn.participantswithoutperso|length }})</a></li>
