--- a/src/LarpManager/Views/gn/pnjs.twig
+++ b/src/LarpManager/Views/gn/pnjs.twig
@@ -8,7 +8,7 @@
 			<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 			<li><a href="{{path('gn.list') }}">Liste des GNs</a></li>
 			<li><a href="{{path('gn.detail', {'gn': gn.id}) }}">{{ gn.label }}</a></li>
-			<li class="active">Les personnages non joueur</li>
+			<li class="active">Les personnages non joueurs</li>
 		</ol>
 		
 		<blockquote>
