#207 sur détail: pnj devant le nom, sur list: icone pnj à gauche et icone invisible pour vivant pour conserver l'espace, et ajout légende à droite du paginator

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -150,3 +150,18 @@ ul.forum li
 	background-color: orange;
 	border-radius: 15px; 
 }
+
+.invisible {
+	/* already exists in bootstrap but just in case we replace the bootstrap css theme someday, redefine it */
+	visibility: hidden;
+}
+
+.paginator-container {
+	display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.legend-header  {
+	font-weight: bold;
+}
