#185 ajout du tri sur toutes les colonnes avec methodes de sort spécifiques pour les champs calculés + refacto pour utiliser des parameters + colonne statut + un peu de changement de style pour aérer les filtres de recherche et aussi sur le header en bois

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -75,7 +75,7 @@ body {
 .header
 {
   background: url('../img/header.png') repeat scroll 0% 0% / 100% 100% transparent;
-  padding: 0px 10px;
+  padding: 2px 10px;
   margin: 2px 0px 10px;
   text-align: center;
   border: 0px none;
@@ -162,6 +162,34 @@ ul.forum li
     justify-content: space-between;
 }
 
+.legend {
+	margin: 10px 0px;
+}
+
 .legend-header  {
 	font-weight: bold;
+}
+
+.form-inline .form-group {
+	margin: 5px;
+}
+
+.form-inline .control-label {	
+	margin-right: 5px;
+}
+
+.btn-toolbar {
+	margin-top: 5px;
+}
+
+.btn-toolbar>.btn, .btn-toolbar>.btn-group, .btn-toolbar>.input-group {
+	margin: 5px;
+}
+
+.pagination {
+	margin: 15px 0px;
+}
+
+.center {
+	text-align: center;
 }
