--- a/src/LarpManager/Views/admin/personnage/list.twig
+++ b/src/LarpManager/Views/admin/personnage/list.twig
@@ -39,8 +39,8 @@
 						<div class="input-group">
 							{{ form_widget(form.type) }}
 							<div class="input-group-btn">
-								<button type="submit" class="btn btn-default" data-toggle="tooltup" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
-								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Reset" href="{{ path('personnage.admin.list') }}"><i class="fa fa-refresh"></i></a>
+								<button type="submit" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
+								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Reset" href="{{ path('personnage.admin.list') }}"><i class="fa fa-undo"></i></a>
 							</div>
 						</div>
 					</div>
@@ -49,7 +49,7 @@
 			</div>
 			<div class="paginator-container">
 				{{ paginator|raw }}
-				<div class="legend"><span class="legend-header">Légende :</span> 💀 = Mort, 🎭 = PNJ</div>
+				<div class="legend"><span class="legend-header">Légende Statut :</span> 💀 = Mort, 🎭 = PNJ, {vide} = Vivant</div>
 			</div>
 
 	<table class="table table-striped table-bordered table-condensed table-hover">
@@ -58,6 +58,11 @@
 				<th>
 					<a href="{{ path('personnage.admin.list', {'order_by': 'id', 'order_dir': macros.getDirection(app,'id')|trim})~optionalParameters }}">
 						# {{ macros.getCaret(app,'id') }}
+					</a>
+				</th>
+				<th>
+					<a title="Statut" href="{{ path('personnage.admin.list', {'order_by': 'status', 'order_dir': macros.getDirection(app,'status')|trim})~optionalParameters }}">
+						S {{ macros.getCaret(app,'status') }}
 					</a>
 				</th>
 				<th>
@@ -81,19 +86,29 @@
 					</a>
 				</th>
 				<th>
-					Pugilat
+					<a href="{{ path('personnage.admin.list', {'order_by': 'pugilat', 'order_dir': macros.getDirection(app,'pugilat')|trim})~optionalParameters }}">
+						Pugilat {{ macros.getCaret(app,'pugilat') }}
+					</a>					
 				</th>
 				<th>
-					Héroïsme
+					<a href="{{ path('personnage.admin.list', {'order_by': 'heroisme', 'order_dir': macros.getDirection(app,'heroisme')|trim})~optionalParameters }}">
+						Héroïsme {{ macros.getCaret(app,'heroisme') }}
+					</a>
 				</th>
 				<th>
-					Utilisateur
+					<a href="{{ path('personnage.admin.list', {'order_by': 'user', 'order_dir': macros.getDirection(app,'user')|trim})~optionalParameters }}">
+						Utilisateur {{ macros.getCaret(app,'user') }}
+					</a>
 				</th>
 				<th>
-					Points d'expérience
+					<a href="{{ path('personnage.admin.list', {'order_by': 'xp', 'order_dir': macros.getDirection(app,'xp')|trim})~optionalParameters }}">
+						Points d'expérience {{ macros.getCaret(app,'xp') }}
+					</a>
 				</th>
 				<th style="text-align:middle;" title="Anomalie">
-					Ano.
+					<a href="{{ path('personnage.admin.list', {'order_by': 'hasAnomalie', 'order_dir': macros.getDirection(app,'hasAnomalie')|trim})~optionalParameters }}">
+						Ano. {{ macros.getCaret(app,'hasAnomalie') }}
+					</a>
 				</th>
 			</tr>
 		</thead>
@@ -101,7 +116,8 @@
 			{% for personnage in personnages %}
 				<tr>
 					<td>{{ personnage.id }}</td>
-					<td>{% if personnage.isPnj() %}🎭 {% else %}{% if personnage.vivant == 0 %}💀 {% else %}<span class="invisible">💀 </span>{% endif %}{% endif %}<a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">{{ personnage.nom }}{% if personnage.surnom %} ({{ personnage.surnom }}){% endif %}</a></td>
+					<td class="center">{% if personnage.isPnj() %}🎭{% else %}{% if personnage.vivant == 0 %}💀{% else %}<span class="invisible">💀</span>{% endif %}{% endif %}</td>
+					<td><a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">{{ personnage.nom }}{% if personnage.surnom %} ({{ personnage.surnom }}){% endif %}</a></td>
 					<td>{{ personnage.classeName }}</td>
 					<td>
 						{% set gn = 'LH1' %}
@@ -122,7 +138,7 @@
 					<td>
 						{% for participant in personnage.participants %}
 							<strong>{{ participant.gn.label }}</strong>&nbsp;-&nbsp;
-							{{ participant.user.etatCivil.nom }} {{ participant.user.etatCivil.prenom }}<br />
+							{{ participant.userFullName }}<br />
 						{% endfor %}
 					</td>
 					<td>
