--- a/src/LarpManager/Views/gn/list.twig
+++ b/src/LarpManager/Views/gn/list.twig
@@ -11,7 +11,7 @@
 		</ol>
 	
 		<blockquote>
-			Voici la liste des jeux organisé par Eve-Oniris. Choisissez celui auquel vous vouler participer. Vous pourrez ainsi acceder aux différentes ressources (Règles, groupes, univers, billeterie) qui composent le jeu.
+			Voici la liste des jeux organisés par Eve-Oniris. Choisissez celui auquel vous voulez participer. Vous pourrez ainsi acceder aux différentes ressources (Règles, groupes, univers, billeterie) qui composent le jeu.
 		</blockquote>
 		
 		<div class="pull-right">
