--- a/src/LarpManager/Views/admin/personnage/list.twig
+++ b/src/LarpManager/Views/admin/personnage/list.twig
@@ -5,6 +5,11 @@
 {% block content %}
 
 	{% import "admin/filterMacros.html.twig" as macros %}
+	{% set iconPjConfirmed = '<span title="PJ participant au GN actif">✅</span>' %}
+	{% set iconPjDead = '<span title="Personnage mort">💀</span>' %}
+	{% set iconPnj = '<span title="PNJ">🎭</span>' %}
+	{% set iconPjOld = '<span title="Ancien PJ ne participant pas au GN actif">➖</span>' %}
+	
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
@@ -19,7 +24,7 @@
 	        	<strong>{{ paginator.totalItems }}</strong> personnages trouvés.
 	    	{% endif %}
 	
-	    	Montre <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
+	    	Résultats affichés : <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
 
 	   		<div class="btn-toolbar" role="toolbar" aria-label="...">
 				<div class="btn-group" role="group" aria-label="...">
@@ -49,7 +54,7 @@
 			</div>
 			<div class="paginator-container">
 				{{ paginator|raw }}
-				<div class="legend"><span class="legend-header">Légende Statut :</span> 💀 = Mort, 🎭 = PNJ, {vide} = Vivant</div>
+				<div class="legend"><span class="legend-header">Légende Statut : </span>{{ iconPjConfirmed | raw }} = PJ Actif, {{ iconPnj | raw }} = PNJ, {{ iconPjOld | raw }} = PJ Non actif, {{ iconPjDead | raw }} = Mort</div>
 			</div>
 
 	<table class="table table-striped table-bordered table-condensed table-hover">
@@ -116,8 +121,10 @@
 			{% for personnage in personnages %}
 				<tr>
 					<td>{{ personnage.id }}</td>
-					<td class="center">{% if personnage.isPnj() %}🎭{% else %}{% if personnage.vivant == 0 %}💀{% else %}<span class="invisible">💀</span>{% endif %}{% endif %}</td>
-					<td><a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">{{ personnage.nom }}{% if personnage.surnom %} ({{ personnage.surnom }}){% endif %}</a></td>
+					<td class="center">
+						{% if personnage.vivant == 0 %}{{ iconPjDead | raw }}{% elseif personnage.isPnj() %}{{ iconPnj | raw }}{% elseif personnage.isLastParticipantOnActiveGn() %}<span class="">{{ iconPjConfirmed | raw }}</span>{% else %}{{ iconPjOld | raw }}{% endif %}
+					</td>
+					<td><a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">{{ personnage.fullName }}</a></td>
 					<td>{{ personnage.classeName }}</td>
 					<td>
 						{% set gn = 'LH1' %}
@@ -130,7 +137,7 @@
 								{% set groupe = 'N\'est pas lié à un groupe' %}
 							{% endif %}
 						{% endfor %}
-						{{ gn }} - {{ groupe }}
+						<strong>{{ gn }}</strong> - {{ groupe }}
 					</td>
 					<td align="center">{{ personnage.renomme|default(0) }}</td>
 					<td align="center">{{ personnage.pugilat|default(0) }}</td>
