--- a/src/LarpManager/Views/admin/personnage/list.twig
+++ b/src/LarpManager/Views/admin/personnage/list.twig
@@ -4,168 +4,13 @@
 
 {% block content %}
 
-	{% import "admin/filterMacros.html.twig" as macros %}
-	{% set iconPjConfirmed = '<span title="PJ participant au GN actif">✅</span>' %}
-	{% set iconPjDead = '<span title="Personnage mort">💀</span>' %}
-	{% set iconPnj = '<span title="PNJ">🎭</span>' %}
-	{% set iconPjOld = '<span title="Ancien PJ ne participant pas au GN actif">➖</span>' %}
-	
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
 		<li class="active">Liste des personnages</li>
 	</ol>
 	
-	<div class="well well-sm">
 
-			{% if paginator.totalItems == 1 %}
-	        	<strong>1</strong> personnage trouvé.
-	    	{% else %}
-	        	<strong>{{ paginator.totalItems }}</strong> personnages trouvés.
-	    	{% endif %}
-	
-	    	Résultats affichés : <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
-
-	   		<div class="btn-toolbar" role="toolbar" aria-label="...">
-				<div class="btn-group" role="group" aria-label="...">
-					<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Ajouter un personnage" href="{{ path('personnage.admin.add') }}"><i class="fa fa-plus"></i></a>
-					<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Faire vieillir les personnages" href="{{ path('personnage.vieillir') }}"><i class="fa fa-users"></i></a>
-					<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Imprimer la liste" href="{{ path('personnage.admin.print') }}"><i class="fa fa-print"></i></a>
-					<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Télécharger la liste (CSV)" href="{{ path('personnage.admin.download') }}"><i class="fa fa-download"></i></a>
-				</div>
-				
-				<form class="form-inline" action="{{ path('personnage.admin.list') }}" method="GET" {{ form_enctype(form) }}>
-					{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
-
-					<div class="form-group">
-						<div class="input-group">
-							{{ form_widget(form.value) }}
-						</div>
-						<div class="input-group">
-							{{ form_widget(form.type) }}
-							<div class="input-group-btn">
-								<button type="submit" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
-								<a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Reset" href="{{ path('personnage.admin.list') }}"><i class="fa fa-undo"></i></a>
-							</div>
-						</div>
-					</div>
-					{{ form_rest(form) }}
-		   		</form>
-			</div>
-			<div class="paginator-container">
-				{{ paginator|raw }}
-				<div class="legend"><span class="legend-header">Légende Statut : </span>{{ iconPjConfirmed | raw }} = PJ Actif, {{ iconPnj | raw }} = PNJ, {{ iconPjOld | raw }} = PJ Non actif, {{ iconPjDead | raw }} = Mort</div>
-			</div>
-
-	<table class="table table-striped table-bordered table-condensed table-hover">
-		<thead>
-			<tr>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'id', 'order_dir': macros.getDirection(app,'id')|trim})~optionalParameters }}">
-						# {{ macros.getCaret(app,'id') }}
-					</a>
-				</th>
-				<th>
-					<a title="Statut" href="{{ path('personnage.admin.list', {'order_by': 'status', 'order_dir': macros.getDirection(app,'status')|trim})~optionalParameters }}">
-						S {{ macros.getCaret(app,'status') }}
-					</a>
-				</th>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'nom', 'order_dir': macros.getDirection(app,'nom')|trim})~optionalParameters }}">
-						Nom {{ macros.getCaret(app,'nom') }}
-					</a>
-				</th>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'classe', 'order_dir': macros.getDirection(app,'classe')|trim})~optionalParameters }}">
-						Classe {{ macros.getCaret(app,'classe') }}
-					</a>
-				</th>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'groupe', 'order_dir': macros.getDirection(app,'groupe')|trim})~optionalParameters }}">
-						Groupe {{ macros.getCaret(app,'groupe') }}
-					</a>
-				</th>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'renomme', 'order_dir': macros.getDirection(app,'renomme')|trim})~optionalParameters }}">
-						Renommée {{ macros.getCaret(app,'renomme') }}
-					</a>
-				</th>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'pugilat', 'order_dir': macros.getDirection(app,'pugilat')|trim})~optionalParameters }}">
-						Pugilat {{ macros.getCaret(app,'pugilat') }}
-					</a>					
-				</th>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'heroisme', 'order_dir': macros.getDirection(app,'heroisme')|trim})~optionalParameters }}">
-						Héroïsme {{ macros.getCaret(app,'heroisme') }}
-					</a>
-				</th>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'user', 'order_dir': macros.getDirection(app,'user')|trim})~optionalParameters }}">
-						Utilisateur {{ macros.getCaret(app,'user') }}
-					</a>
-				</th>
-				<th>
-					<a href="{{ path('personnage.admin.list', {'order_by': 'xp', 'order_dir': macros.getDirection(app,'xp')|trim})~optionalParameters }}">
-						Points d'expérience {{ macros.getCaret(app,'xp') }}
-					</a>
-				</th>
-				<th style="text-align:middle;" title="Anomalie">
-					<a href="{{ path('personnage.admin.list', {'order_by': 'hasAnomalie', 'order_dir': macros.getDirection(app,'hasAnomalie')|trim})~optionalParameters }}">
-						Ano. {{ macros.getCaret(app,'hasAnomalie') }}
-					</a>
-				</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for personnage in personnages %}
-				<tr>
-					<td>{{ personnage.id }}</td>
-					<td class="center">
-						{% if personnage.vivant == 0 %}{{ iconPjDead | raw }}{% elseif personnage.isPnj() %}{{ iconPnj | raw }}{% elseif personnage.isLastParticipantOnActiveGn() %}<span class="">{{ iconPjConfirmed | raw }}</span>{% else %}{{ iconPjOld | raw }}{% endif %}
-					</td>
-					<td><a href="{{ path('personnage.admin.detail', {'personnage':personnage.id}) }}">{{ personnage.fullName }}</a></td>
-					<td>{{ personnage.classeName }}</td>
-					<td>
-						{% set gn = 'LH1' %}
-						{% set groupe = 'N\'est pas lié à un groupe' %}
-						{% for participant in personnage.participants %}
-							{% set gn = participant.gn %}
-							{% if participant.groupeGn %}
-								{% set groupe = participant.groupeGn.groupe.nom %}
-							{% else %}
-								{% set groupe = 'N\'est pas lié à un groupe' %}
-							{% endif %}
-						{% endfor %}
-						<strong>{{ gn }}</strong> - {{ groupe }}
-					</td>
-					<td align="center">{{ personnage.renomme|default(0) }}</td>
-					<td align="center">{{ personnage.pugilat|default(0) }}</td>
-					<td align="center">{{ personnage.heroisme|default(0) }}</td>
-					<td>
-						{% for participant in personnage.participants %}
-							<strong>{{ participant.gn.label }}</strong>&nbsp;-&nbsp;
-							{{ participant.userFullName }}<br />
-						{% endfor %}
-					</td>
-					<td>
-						{{ personnage.xp|default(0) }} / {{ personnage.xpTotal }} XP - <a href="{{ path('personnage.admin.xp', {'personnage': personnage.id}) }}">Modifier</a>
-					</td>
-					<td>
-						{% set languesAnomalie = personnage.getLanguesAnomaliesMessage() %}
-						{% set potionAnomalie = personnage.getPotionAnomalieMessage() %}
-						{% set sortAnomalie = personnage.getSortAnomalieMessage() %}
-						{% set priereAnomalie = personnage.getPrieresAnomalieMessage() %}
-						{% if languesAnomalie != "" or potionAnomalie != "" or sortAnomalie != "" or priereAnomalie != "" %}
-							<div style="margin:auto;" class="pastille-orange" title='{{languesAnomalie}} {{potionAnomalie}} {{sortAnomalie}} {{priereAnomalie}}'>&nbsp;</div>
-						{% endif %}					
-					</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
-		
-	{{ paginator|raw }}
-	</div>
+	{{ include('admin/personnage/search.twig') }}	
 
 {% endblock content %}
