--- a/src/LarpManager/Views/admin/technologie/index.twig
+++ b/src/LarpManager/Views/admin/technologie/index.twig
@@ -25,7 +25,7 @@
 					<div class="col-md-4">
 						<a href="{{ path('technologie.update',{'technologie':technologie.id}) }}"><i class="fa fa-pencil"></i> Modifier</a>&nbsp;|&nbsp;
 						<a href="{{ path('technologie.detail',{'technologie':technologie.id}) }}"><i class="fa fa-eye"></i> Detail</a>&nbsp;|&nbsp;
-						<a href="{{ path('technologie.personnages',{'technologie':technologie.id}) }}"><i class="fa fa-eye"></i> Personnages</a>&nbsp;|&nbsp;
+						<a href="{{ path('technologie.personnages',{'technologie':technologie.id}) }}"><i class="fa fa-users"></i> Personnages</a>&nbsp;|&nbsp;
 						<a href="{{ path('technologie.delete',{'technologie':technologie.id}) }}"><i class="fa fa-eraser"></i> Supprimer</a>
 					</div>
 				</div>
